--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tsc --watch\" \"tsnd --respawn src/app.ts\"",
+    "dev": "concurrently \"tsc --watch\" \"tsnd --respawn -r tsconfig-paths/register src/app.ts\"",
     "watch": "tsc --watch"
   },
   "_moduleAliases": {
@@ -15,10 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^20.12.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.4",
-    "@types/module-alias": "^2.0.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.4"
   },
   "description": "",
   "dependencies": {
