--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"tsc --watch\" \"tsnd --respawn -r tsconfig-paths/register src/app.ts\"",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "doc": "typedoc"
   },
   "_moduleAliases": {
     "@": "src"
@@ -15,17 +16,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/module-alias": "^2.0.4",
     "@types/node": "^20.12.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "typedoc": "^0.25.13",
     "typescript": "^5.4.4"
   },
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "module-alias": "^2.2.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
