refactor: refactored api to now use postgresql

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PORT=8000
 JWT_SECRET=supersecret
 REFRESH_SECRET=supersupersecret
 NODE_ENV=development
+DATABASE_URL=postgres://postgres:user@localhost:5432/pokemon
