--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "tsc --watch",
     "doc": "typedoc",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "generate": "drizzle-kit generate pg --config=src/config/drizzle.config.ts",
+    "migrate": "npx tsx -r dotenv/config src/infrastructure/data/migrate.ts",
+    "studio": "drizzle-kit studio --config=src/config/drizzle.config.ts"
   },
   "_moduleAliases": {
     "@": "src"
@@ -20,16 +23,21 @@
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.5",
+    "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "drizzle-kit": "^0.21.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.10.1",
     "tsconfig-paths": "^4.2.0",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.4"
@@ -40,9 +48,15 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "drizzle-orm": "^0.30.10",
+    "helmet": "^7.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
+    "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
