--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ JWT_SECRET=supersecret
 REFRESH_SECRET=supersupersecret
 NODE_ENV=development
 DATABASE_URL=postgres://postgres:user@localhost:5432/pokemon
+CLIENT_URL=http://localhost:3000
